--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css" />
+    <style>
+      div{
+        float: left;
+      }
+    </style>
   </head>
   <body>
     <header>
